# distmetrics

./: .gitignore  CHANGELOG.md  README.md  claude.md  environment.yml  environment_gpu.yml  merged.tif  pyproject.toml
.github/workflows/: bump-tag-for-release.yml  pypi-release.yml  static-analysis.yml
notebooks/: A__single_burst_application-memory.ipynb  A__single_burst_application.ipynb  B__large_aoi_application.ipynb  Untitled.ipynb  V2_single_burst_application.ipynb  fire-example.ipynb  landslide-example.ipynb  testing123.ipynb  transformer-on-landslide.ipynb
src/distmetrics/: __init__.py  asf_burst_search.py  asf_io.py  cusum.py  despeckle.py  logratio.py  mahalanobis.py  mahalanobis2d.py  model_load.py  nd_tools.py  rio_tools.py  tf_inference.py  tf_metric.py  tf_model.py  tiling.py  transformer.py
src/distmetrics/model_weights/: transformer_config.py
test/: test_mahalanobis.py  test_transformer.py
tests/: conftest.py  test_rio_tools.py  test_transformer.py
tests/test_data/: OPERA_L2_RTC-S1_T009-019294-IW2_20240204T084747Z_20240204T155800Z_S1A_30_v1.0_VH_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240204T084747Z_20240204T155800Z_S1A_30_v1.0_VV_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240216T084747Z_20240216T160042Z_S1A_30_v1.0_VH_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240216T084747Z_20240216T160042Z_S1A_30_v1.0_VV_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240228T084747Z_20240228T165748Z_S1A_30_v1.0_VV_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240416T084748Z_20240419T105349Z_S1A_30_v1.0_VV_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240428T084749Z_20240429T083328Z_S1A_30_v1.0_VH_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240522T084748Z_20240522T152955Z_S1A_30_v1.0_VH_tv_cropped.tif  OPERA_L2_RTC-S1_T009-019294-IW2_20240522T084748Z_20240522T152955Z_S1A_30_v1.0_VV_tv_cropped.tif
tests/test_data/categorical_merge_test_data/: merged.tif  (+2 more)
(+24 files in other folders)
